k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: region-health
spec:
  ingressClassName: nginx
  rules:
      - http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: frontend-service
                  port:
                    number: 80
              path: /
            - pathType: Prefix
              backend:
                service:
                  name: api-service
                  port:
                    number: 80
              path: /api
